# modern-cpp-2024-project

./: .gitignore  CMakeLists.txt  dev.sh  prerequisites.sh
app/: main.cpp
